aml-parser/src/snapshots/aml_parser__expressions__test__array_index.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
ArrayIndex:
  lhs:
    ArrayIndex:
      lhs:
        Ident:
          location:
            start_byte: 0
            end_byte: 5
      index:
        Primitive:
          Int: 0
  index:
    Primitive:
      Int: 1
