aml-parser/src/snapshots/aml_parser__expressions__test__dot_lookup.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
Binary:
  lhs:
    Binary:
      lhs:
        Ident:
          location:
            start_byte: 0
            end_byte: 1
          value: a
      rhs:
        Ident:
          location:
            start_byte: 2
            end_byte: 3
          value: b
      op: Dot
  rhs:
    Ident:
      location:
        start_byte: 4
        end_byte: 5
      value: c
  op: Dot
