aml-parser/src/snapshots/aml_parser__expressions__test__either.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
Binary:
  lhs:
    Binary:
      lhs:
        Ident:
          location:
            start_byte: 0
            end_byte: 1
          value: a
      rhs:
        Ident:
          location:
            start_byte: 4
            end_byte: 5
          value: b
      op: Either
  rhs:
    Ident:
      location:
        start_byte: 8
        end_byte: 9
      value: c
  op: Either
