aml-parser/src/snapshots/aml_parser__expressions__test__function.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
Call:
  fun:
    Ident:
      location:
        start_byte: 0
        end_byte: 3
      value: fun
  args:
    - Primitive:
        Int: 1
    - Binary:
        lhs:
          Ident:
            location:
              start_byte: 7
              end_byte: 8
            value: a
        rhs:
          Binary:
            lhs:
              Primitive:
                Int: 2
            rhs:
              Primitive:
                Int: 3
            op: Mul
        op: Plus
    - Primitive:
        Int: 3
