aml-parser/src/snapshots/aml_parser__expressions__test__function_no_args.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
Call:
  fun:
    Ident:
      location:
        start_byte: 0
        end_byte: 1
      value: f
  args: []
