aml-parser/src/snapshots/aml_parser__expressions__test__list.snap
---
source: aml-parser/src/expressions.rs
expression: parse(input)
---
List:
  - Primitive:
      Int: 1
  - Primitive:
      Int: 2
  - Ident:
      location:
        start_byte: 7
        end_byte: 8
  - Primitive:
      Int: 4
